--- a/src/app/custom-wallboard/custom-wallboard.component.html
+++ b/src/app/custom-wallboard/custom-wallboard.component.html
@@ -136,24 +136,24 @@
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
 							</div>
 							<div class="custom-wallboard-box  blue-bg-clr">
-								<div class="wallboard-count-item">0</div>
+								<div class="wallboard-count-item">{{this.unread_wp_count}}</div>
 								<div class="custom-wallboard-item-name">Unopened WhatsApp Messages</div>
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
 							</div>
 
 							<div class="custom-wallboard-box dark-green-bg-clr">
-								<div class="wallboard-count-item">0</div>
+								<div class="wallboard-count-item">{{this.unread_fb_count}}</div>
 								<div class="custom-wallboard-item-name">Unopened Facebook Messages</div>
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
 							</div>
 							<div class="custom-wallboard-box  blue-bg-clr">
-								<div class="wallboard-count-item">0</div>
+								<div class="wallboard-count-item">{{this.total_wp_count}}</div>
 								<div class="custom-wallboard-item-name">Total WhatsApp Messages</div>
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
 							</div>
 
 							<div class="custom-wallboard-box dark-green-bg-clr">
-								<div class="wallboard-count-item">0</div>
+								<div class="wallboard-count-item">{{this.total_fb_count}}</div>
 								<div class="custom-wallboard-item-name">Total Facebook Messages</div>
 								<div class="custom-wallboard-icon"><img src="assets/images/custom-wallboard/agent-busy.svg"></div>
 							</div>
