updated the queue management

--- a/src/app/mc/dialpad/dialpad.component.html
+++ b/src/app/mc/dialpad/dialpad.component.html
@@ -894,7 +894,7 @@ Call Conference End
 Call Contact Action Modal
 --------------------------->
 <div class="call-contact-minimize pulse"  *ngIf="show_minimize_button">
-    <p><a href="#" class="bold" (click)="openModelPopup('')">
+    <p><a href="#" class="bold" style="color:  white;" (click)="openModelPopup('')">
         <img src="assets/images/custom-wallboard/call-answered.svg" height="18" class="mr-2 shake-animation" >
         Incoming Call form {{getNums}}</a></p>
 </div>
